--- a/META.yml
+++ b/META.yml
@@ -9,11 +9,12 @@ build_requires:
   Test::Exception: 0
   Test::MockObject: 0
   Test::More: 0.88
+  Test::Warn: 0
   vars: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102342, CPAN::Meta::Converter version 2.102400'
+generated_by: 'Dist::Zilla version 4.200000, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,7 +26,7 @@ requires:
   Dist::Zilla::Role::FileGatherer: 0
   Dist::Zilla::Role::TextTemplate: 0
   Moose: 0
-version: 1.02
+version: 1.03
 x_Dist_Zilla:
   plugins:
     -
@@ -35,35 +36,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@DANIELP/GatherDir'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@DANIELP/ExecDir'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@DANIELP/ShareDir'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@DANIELP/PruneCruft'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@DANIELP/ManifestSkip'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@DANIELP/AutoPrereqs'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@DANIELP/PkgVersion'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::PodVersion
       name: '@DANIELP/PodVersion'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@DANIELP/ReportVersions::Tiny'
@@ -79,7 +80,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@DANIELP/MetaTests'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::MinimumVersionTests
       name: '@DANIELP/MinimumVersionTests'
@@ -91,7 +92,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@DANIELP/PodSyntaxTests'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::UnusedVarsTests
       name: '@DANIELP/UnusedVarsTests'
@@ -99,27 +100,27 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@DANIELP/ExtraTests'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@DANIELP/MetaConfig'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@DANIELP/MetaYAML'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@DANIELP/MetaJSON'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::License
       name: '@DANIELP/License'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@DANIELP/Readme'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
       name: '@DANIELP/ReadmeMarkdownFromPod'
@@ -127,7 +128,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@DANIELP/MakeMaker'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ChangelogFromGit
       name: '@DANIELP/ChangelogFromGit'
@@ -135,7 +136,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@DANIELP/Manifest'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@DANIELP/Git::Check'
@@ -143,11 +144,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@DANIELP/TestRelease'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@DANIELP/ConfirmRelease'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@DANIELP/Git::Commit'
@@ -159,7 +160,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@DANIELP/UploadToCPAN'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -167,25 +168,25 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.102342
+      version: 4.200000
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.102342
+      version: 4.200000
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.102342
+    version: 4.200000
