--- a/dist.ini
+++ b/dist.ini
@@ -3,8 +3,33 @@ author           = Daniel Pittman <daniel@rimspace.net>
 license          = Perl_5
 copyright_holder = Daniel Pittman
 
-[@DANIELP]
+; Use the local [ReportVersions::Tiny] instead of the installed one
+[Bootstrap::lib]
+
+[@Filter]
+-bundle = @DANIELP
+-remove = MinimumVersionTests
+-remove = CompileTests
+-remove = PortabilityTests
+-remove = UnusedVarsTests
+; Use ChangelogFromGit explicitely below to override the file_name property set
+; to 'Changlog' in @DANIELP as this is not a name recognized by MetaCPAN
+-remove = ChangelogFromGit
 synopsis_test = 0
+
+[Test::MinimumVersion]
+[Test::Compile]
+[Test::Portability]
+[Test::UnusedVars]
+
+[ChangelogFromGit]
+file_name = Changes
+wrap_column = 78
+tag_regexp = ^release-(\d+\.\d+)$
+max_age = 1000
+
+[GithubMeta]
+remote = github
 
 [Prereqs]
 Dist::Zilla = 3.101390
