--- a/META.yml
+++ b/META.yml
@@ -7,16 +7,16 @@ build_requires:
   File::Temp: 0
   Test::Differences: 0
   Test::Exception: 0
+  Test::Fatal: 0
   Test::MockObject: 0
   Test::More: 0.88
   Test::Warn: 0
   strict: 0
-  vars: 0
   warnings: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300016, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -28,48 +28,49 @@ requires:
   Dist::Zilla::Role::FileGatherer: 0
   Dist::Zilla::Role::TextTemplate: 0
   Moose: 0
+  version: 0
 resources:
   homepage: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny
   repository: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny.git
-version: 1.04
+version: 1.05
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Filter/Git::NextVersion'
-      version: 1.121010
+      version: 1.121820
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/AutoPrereqs'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::PodVersion
       name: '@Filter/PodVersion'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
@@ -81,35 +82,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Filter/MetaTests'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Filter/ExtraTests'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
       name: '@Filter/ReadmeMarkdownFromPod'
@@ -117,39 +118,39 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Filter/Git::Check'
-      version: 1.121010
+      version: 1.121820
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Filter/Git::Commit'
-      version: 1.121010
+      version: 1.121820
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Filter/Git::Tag'
-      version: 1.121010
+      version: 1.121820
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: Test::MinimumVersion
-      version: 2.0.1
+      version: 2.000002
     -
       class: Dist::Zilla::Plugin::Test::Compile
       name: Test::Compile
@@ -157,11 +158,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::Portability
       name: Test::Portability
-      version: 2.0.2
+      version: 2.000003
     -
       class: Dist::Zilla::Plugin::Test::UnusedVars
       name: Test::UnusedVars
-      version: 2.0.1
+      version: 2.000003
     -
       class: Dist::Zilla::Plugin::ChangelogFromGit
       name: ChangelogFromGit
@@ -177,33 +178,33 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300016
+      version: 4.300020
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300016
+      version: 4.300020
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300016
+    version: 4.300020
