Import of DOLMEN/Dist-Zilla-Plugin-ReportVersions-Tiny-1.06 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-ReportVersions-Tiny
gitpan-cpan-version:      1.06
gitpan-cpan-path:         DOLMEN/Dist-Zilla-Plugin-ReportVersions-Tiny-1.06.tar.gz
gitpan-cpan-author:       DOLMEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -2,6 +2,7 @@
 abstract: 'reports dependency versions during testing'
 author:
   - 'Daniel Pittman <daniel@rimspace.net>'
+  - 'Olivier Mengue <dolmen@cpan.org>'
 build_requires:
   File::Find: 0
   File::Temp: 0
@@ -16,7 +17,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300023, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,7 +33,7 @@ requires:
 resources:
   homepage: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny
   repository: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny.git
-version: 1.05
+version: 1.06
 x_Dist_Zilla:
   plugins:
     -
@@ -42,35 +43,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/AutoPrereqs'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::PodVersion
       name: '@Filter/PodVersion'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
@@ -82,35 +83,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Filter/MetaTests'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Filter/ExtraTests'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
       name: '@Filter/ReadmeMarkdownFromPod'
@@ -118,11 +119,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Filter/Git::Check'
@@ -130,11 +131,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Filter/Git::Commit'
@@ -146,7 +147,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: Test::MinimumVersion
@@ -164,10 +165,6 @@ x_Dist_Zilla:
       name: Test::UnusedVars
       version: 2.000003
     -
-      class: Dist::Zilla::Plugin::ChangelogFromGit
-      name: ChangelogFromGit
-      version: 0.005
-    -
       class: Dist::Zilla::Plugin::GithubMeta
       name: GithubMeta
       version: 0.28
@@ -178,33 +175,33 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300020
+      version: 4.300023
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300020
+      version: 4.300023
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300020
+    version: 4.300023
