--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,8 @@
 name             = Dist-Zilla-Plugin-ReportVersions-Tiny
 author           = Daniel Pittman <daniel@rimspace.net>
+author           = Olivier Mengue <dolmen@cpan.org>
 license          = Perl_5
-copyright_holder = Daniel Pittman
+copyright_holder = Olivier Mengue
 
 ; Use the local [ReportVersions::Tiny] instead of the installed one
 [Bootstrap::lib]
@@ -12,8 +13,6 @@ copyright_holder = Daniel Pittman
 -remove = CompileTests
 -remove = PortabilityTests
 -remove = UnusedVarsTests
-; Use ChangelogFromGit explicitely below to override the file_name property set
-; to 'Changlog' in @DANIELP as this is not a name recognized by MetaCPAN
 -remove = ChangelogFromGit
 synopsis_test = 0
 
@@ -21,12 +20,6 @@ synopsis_test = 0
 [Test::Compile]
 [Test::Portability]
 [Test::UnusedVars]
-
-[ChangelogFromGit]
-file_name = Changes
-wrap_column = 78
-tag_regexp = ^release-(\d+\.\d+)$
-max_age = 1000
 
 [GithubMeta]
 remote = github
