Import of DOLMEN/Dist-Zilla-Plugin-ReportVersions-Tiny-1.08 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-ReportVersions-Tiny
gitpan-cpan-version:      1.08
gitpan-cpan-path:         DOLMEN/Dist-Zilla-Plugin-ReportVersions-Tiny-1.08.tar.gz
gitpan-cpan-author:       DOLMEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -27,13 +27,14 @@ requires:
   Dist::Zilla: 3.101390
   Dist::Zilla::File::FromCode: 0
   Dist::Zilla::Role::FileGatherer: 0
+  Dist::Zilla::Role::PrereqSource: 0
   Dist::Zilla::Role::TextTemplate: 0
   Moose: 0
   version: 0.9901
 resources:
   homepage: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny
   repository: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny.git
-version: 1.07
+version: 1.08
 x_Dist_Zilla:
   plugins:
     -
@@ -176,6 +177,10 @@ x_Dist_Zilla:
           type: requires
       name: Prereqs
       version: 4.300023
+    -
+      class: Dist::Zilla::Plugin::Git::Push
+      name: Git::Push
+      version: 2.000
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
