Import of DOLMEN/Dist-Zilla-Plugin-ReportVersions-Tiny-1.10 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Plugin-ReportVersions-Tiny
gitpan-cpan-version:      1.10
gitpan-cpan-path:         DOLMEN/Dist-Zilla-Plugin-ReportVersions-Tiny-1.10.tar.gz
gitpan-cpan-author:       DOLMEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -4,8 +4,8 @@ author:
   - 'Daniel Pittman <daniel@rimspace.net>'
   - 'Olivier Mengue <dolmen@cpan.org>'
 build_requires:
-  File::Find: 0
-  File::Temp: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   Test::Deep: 0
   Test::Fatal: 0
   Test::MockObject: 0
@@ -17,7 +17,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.131560'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -34,7 +34,7 @@ requires:
 resources:
   homepage: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny
   repository: https://github.com/dolmen/p5-Dist-Zilla-Plugin-ReportVersions-Tiny.git
-version: 1.09
+version: 1.10
 x_Dist_Zilla:
   perl:
     version: 5.014002
@@ -46,35 +46,35 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Filter/AutoPrereqs'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Filter/PkgVersion'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::PodVersion
       name: '@Filter/PodVersion'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Filter/ReportVersions::Tiny'
@@ -86,31 +86,31 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Filter/MetaTests'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Filter/PodSyntaxTests'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Filter/MetaConfig'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Filter/MetaJSON'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::ReadmeMarkdownFromPod
       name: '@Filter/ReadmeMarkdownFromPod'
@@ -118,11 +118,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Filter/Git::Check'
@@ -130,11 +130,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Filter/Git::Commit'
@@ -146,19 +146,25 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::RunExtraTests
       name: RunExtraTests
-      version: 0.008
+      version: 0.011
     -
       class: Dist::Zilla::Plugin::Test::MinimumVersion
       name: Test::MinimumVersion
       version: 2.000005
     -
       class: Dist::Zilla::Plugin::Test::Compile
+      config:
+        Dist::Zilla::Plugin::Test::Compile:
+          module_finder:
+            - ':InstallModules'
+          script_finder:
+            - ':ExecFiles'
       name: Test::Compile
-      version: 1.112820
+      version: 2.024
     -
       class: Dist::Zilla::Plugin::Test::Portability
       name: Test::Portability
@@ -166,11 +172,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Test::UnusedVars
       name: Test::UnusedVars
-      version: 2.000003
+      version: 2.000004
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: GithubMeta
-      version: 0.28
+      version: 0.30
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -178,7 +184,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: Git::Push
@@ -186,29 +192,29 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300035
+      version: 4.300038
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300035
+      version: 4.300038
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300035
+    version: 4.300038
